--- a/src/app/product-sku-detail/product-sku-detail.component.scss
+++ b/src/app/product-sku-detail/product-sku-detail.component.scss
@@ -10,7 +10,7 @@
 }
   .col-2{
     padding: 0px;
-    margin-left: 70px;
+    margin-left: 80px;
   }
   
   .textarea{
@@ -27,8 +27,8 @@
     color: red;
   }
   #toggle{
-   margin-left:760px;
-   margin-top: -50px;
+   margin-left:830px;
+   margin-top: -80px;
   }
   .select{
     font-size: medium;
@@ -175,6 +175,17 @@
   margin-left: 150px;
   font-size: 10px;
 
+}
+#lastrow{
+  margin-left: 220px;
+}
+#productId{
+  margin-left: 20px;
+}
+.form-label{
+  font-size: 18px;
+  margin-top: 10px;
+  margin-left: 10px;
 }
   
   
