--- a/src/app/modules/admin/components/add-options/add-options.component.html
+++ b/src/app/modules/admin/components/add-options/add-options.component.html
@@ -117,7 +117,7 @@
 
 
 
-<!-- <mat-form-field>
+<mat-form-field>
   <mat-label>Select Fruits</mat-label>
   <mat-select [(ngModel)]="selectedFruits" multiple>
     <mat-select-trigger>
@@ -127,4 +127,4 @@
       {{ fruit }}
     </mat-option>
   </mat-select>
-</mat-form-field> -->
+</mat-form-field>
