--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
@@ -16,14 +16,25 @@
     font-size: large;
 }
 
+.product-catalog{
+margin-left: 24%;
+margin-top: -100px;
+}
+
 .dialog-content {
-    height: auto;
+    height: 400px;
+    
 }
 
 button {
     font-size: large;
+    margin-top: 100px;
 }
 .ManufacturerId{
     margin-left: 20px;
     font-size: large;
+}
+#addnewcatalogbtn{
+    margin-left: 500px; 
+     margin-top: -100px;
 }
