--- a/src/app/product-sku/product-sku.component.html
+++ b/src/app/product-sku/product-sku.component.html
@@ -192,16 +192,32 @@
 
         </div>
 
+        <div class="col-2">
+            <label class="form-label">SelfLocation Code:</label>
+            <input type="text" class="form-control" id="barCode" name="barCode" [(ngModel)]="productSku.selfLocCd"
+                formControlName="selfLocCd">
 
-         <div class="form-check form-switch" id="toggle">
+            <div
+                *ngIf="AddproductSkuform.controls['selfLocCd'].touched && AddproductSkuform.controls['selfLocCd'] ?.['errors']">
+                <span *ngIf="form ['selfLocCd'].getError('required')!=null" class="invalid"> enter SelfLocation Code</span>
+                <span *ngIf="form ['selfLocCd'].getError('minLength')!=null" class="invalid"> minimum length is
+                    6</span>
+
+            </div>
+        </div>
+
+
+
+
+        <div class="form-check form-switch" id="toggle">
             <p class="select">Select Availablity Status:</p>
             <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked
                 [(ngModel)]="productSku.status" formControlName="status">
             <span>{{productSku.status? 'Available' : 'Not-Available'}}</span>
-        </div> 
+        </div>
 
 
-       
+
     </div>
 
 
