Implemented multiselect categories for product and added new staff functionality.

--- a/src/app/modules/admin/components/order-management/order-management.component.scss
+++ b/src/app/modules/admin/components/order-management/order-management.component.scss
@@ -42,9 +42,12 @@
   }
   #view-icon{
     color: green;
-    align-items: end;
+    // align-items: end;
+    //  margin-left: 100px;
+    // position: relative;
      
   }
+ 
   .mat-header-row {
     background-color: hsl(203, 80%, 61%);
   }
