--- a/src/app/modules/admin/components/header/header.component.html
+++ b/src/app/modules/admin/components/header/header.component.html
@@ -8,9 +8,19 @@
     <a mat-flat-button color="primary" style="font-size:larger;" routerLink="./products" routerLinkActive="active-button">Inventory</a>
     <a mat-flat-button color="primary" style="size: medium; font-size:larger;" routerLink="./vendors" routerLinkActive="active-button">Vendor Mgmt</a>
     <a mat-flat-button color="primary" style="font-size:larger;"  routerLink="./order-management" routerLinkActive="active-button">Operations</a>
-    <a mat-flat-button color="primary" style="font-size:larger;" routerLinkActive="active-button">Admin</a>
+    <a mat-flat-button color="primary" style="font-size:larger;"  routerLinkActive="active-button"   [matMenuTriggerFor]="menu" id="admin">Admin</a>
+    <!-- <button mat-button [matMenuTriggerFor]="menu">Hover Me</button> -->
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item routerLink="./staff-list">Staff management</button>
+      <button mat-menu-item></button>
+      <button mat-menu-item></button>
+    </mat-menu>
+    
             <button mat-icon-button class="account-icon" (click)="Logout()">
             <mat-icon>account_circle</mat-icon>
             </button>
 </mat-toolbar>
+
+
+
 
