--- a/src/app/modules/admin/components/order-management/order-management.component.html
+++ b/src/app/modules/admin/components/order-management/order-management.component.html
@@ -102,7 +102,7 @@
 
 
         &nbsp;
-        <div class="view-icon">
+        <div>
           <i class="bi bi-card-list"></i>
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-card-list"
             viewBox="0 0 16 16" (click)="viewOrderItemDetails(element.orderId)" id="view-icon">
@@ -150,6 +150,6 @@
   </mat-table>
 </div>
 
-<!-- <ng-container *ngIf="raji" >
+<!-- <ng-container *ngIf="" >
   <app-start-filling-action [datafromparent]="CurrentOrder"></app-start-filling-action>
   </ng-container> -->
