--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.html
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.html
@@ -43,35 +43,23 @@
 
 
 
-      <div formArrayName="selectedCatalogs" class="product-catalog">
-        <div *ngFor="let catalog of productForm.get('selectedCatalogs').controls; let i=index" [formGroupName]="i">
-          <mat-form-field>
+      <div formArrayName="catalog" class="product-catalog">
+        <mat-form-field>
 
-            <mat-label>Select Catalog</mat-label>
-            <mat-select multiple [(value)]="selectedmanufactureId" formControlName="selectedCatalogs">
-          
-              <!-- <input class="form-control" href="#datalistOptions" id="exampleDataList" placeholder="Type to search..." class="col-6" [(ngModel)]="searchText"> -->
-              <mat-option *ngFor="let item of Catalogsdata "  [value]="item">
-                {{item.parent}}/{{item.catalogName}}
+          <mat-label>Select Catalog</mat-label>
+          <mat-select multiple [(value)]="selectedCatalogVals" (selectionChange)="onSelectCatalogs()">
+            <input matInput type="text" (input)="filterOptions($event)">
+            <!-- <mat-select multiple [(value)]="selectedmanufactureId" formControlName="selectedCatalogs"> -->
+            <!-- <input class="form-control" href="#datalistOptions" id="exampleDataList" placeholder="Type to search..." class="col-6" [(ngModel)]="searchText"> -->
+            <mat-option *ngFor="let item of Catalogsdata" [value]="item">
+              {{item.parent}}/{{item.catalogName}}
 
-              </mat-option>
+            </mat-option>
 
-            </mat-select>
-          </mat-form-field>
+          </mat-select>
+        </mat-form-field>
 
-
-
-          <!-- <mat-form-field class="product-name" appearance="fill">
-            <mat-label>ProductId</mat-label>
-            <input matInput formControlName="productId">
-          </mat-form-field> -->
-        </div>
       </div>
-      <br>
-
-
-
-
     </div>
 
 
@@ -79,10 +67,7 @@
 
 
     <div>
-      <!-- <i class="bi bi-plus-lg"></i>
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16" (click)="addNewCatalog()">
-        <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
-      </svg> -->
+
       <button type="button" (click)="addNewCatalog()" id="addnewcatalogbtn" class="btn btn-outline-primary">Add New
         Catalog</button>
     </div>
@@ -96,31 +81,10 @@
   </form>
 </div>
 
-<!-- <mat-form-field>
-  <mat-label>Select Fruits</mat-label>
-  <mat-select [(ngModel)]="selectedFruits" multiple>
-   
-    <mat-select-trigger>
-      {{selectedFruits}}
-       {{ selectedFruits.length > 0 ? selectedFruits.length + ' fruits selected' : 'Select fruits' }} 
-    </mat-select-trigger>
-    <input matInput placeholder="Search.." (input)="search($event)" />
-    <mat-option *ngFor="let fruit of Catalogsdata" [value]="fruit">
-      {{ fruit.parentName}}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-<P>You have selected Items:{{selectedFruits}}</P> -->
 
 
-<!-- <mat-form-field>
-  <mat-select placeholder="Toppings"  [(value)]="selectedToppings" multiple>
-    <mat-option *ngFor="let topping of Catalogsdata" [value]="topping">{{topping.parentName}}</mat-option>
-  </mat-select>
-</mat-form-field> -->
-<!-- <p>
-  {{selectedToppings | json}}
-</p> -->
-<!-- <p>abbv:{{selectedmanufactureId}}</p> -->
 
-<!-- <div *ngFor="let catalog of productForm.get('catalog').controls; let i=index" [formGroupName]="i"> -->
+
+
+
+<!-- <p>abbv:{{selectedCatalogVals}}</p> -->
