implemented staff update functionality..

--- a/src/app/modules/admin/components/add-staff/add-staff.component.html
+++ b/src/app/modules/admin/components/add-staff/add-staff.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Add New Catalog</h1>
+<h1 mat-dialog-title style="margin-left: 430px;">Add New Staff</h1>
 <div mat-dialog-content class="dialog-content">
     <form [formGroup]="addstaffform">
         <div>
