--- a/src/app/modules/admin/components/verify-payment/verify-payment.component.html
+++ b/src/app/modules/admin/components/verify-payment/verify-payment.component.html
@@ -1,49 +1,50 @@
 <form [formGroup]="verifypaymentform" id="form">
     <!-- <h1>data:{{datafromparent.statusCd}}</h1> -->
 
-<h1>Verify Payment</h1>
-<button type="button" id="printbtn">Print</button>
+    <h1>Verify Payment</h1>
+    <button type="button" id="printbtn">Print</button>
     <div class="card" class="card1">
-     
+
         <div class="card-body" class="card-body1">
             <div class="row">
-
-
-
-                <div class="col-4">
+                 <div class="col-3">
                     <label class="lables">OrderId:</label>
                     <input type="text" formControlName="orderId" class="form-control" [(ngModel)]="Orderdetails.orderId"
-                        placeholder="{{Orderdetails.orderId}}" [attr.disabled]="isDisabled ? true : null" >
+                        placeholder="{{Orderdetails.orderId}}" [attr.disabled]="isDisabled ? true : null">
 
                 </div>
 
-                <div class="col-4">
+                <div class="col-3">
                     <label class="lables">Mobile number:</label>
                     <input type="text" class="form-control" [(ngModel)]="Orderdetails.mobileNumber"
-                        placeholder="{{Orderdetails.mobileNumber}}" [attr.disabled]="isDisabled ? true : null" >
+                        placeholder="{{Orderdetails.mobileNumber}}" [attr.disabled]="isDisabled ? true : null">
                 </div>
-                <div class="col-4">
+                <div class="col-3">
                     <label class="lables">Payment Id:</label>
                     <input type="text" class="form-control" [(ngModel)]="Orderdetails.pgRazorpayPaymentId"
-                        placeholder="{{Orderdetails.pgRazorpayPaymentId}}" [attr.disabled]="isDisabled ? true : null" >
+                        placeholder="{{Orderdetails.pgRazorpayPaymentId}}" [attr.disabled]="isDisabled ? true : null">
                 </div>
-                <div class="col-4">
+            </div>
+            <div class="row">
+                <div class="col-3">
                     <label class="lables">Order Submitted Date:</label>
                     <input type="text" class="form-control" [(ngModel)]="Orderdetails.orderSubmitDtTm"
-                        placeholder="{{Orderdetails.orderSubmitDtTm}}" [attr.disabled]="isDisabled ? true : null" >
+                        placeholder="{{Orderdetails.orderSubmitDtTm}}" [attr.disabled]="isDisabled ? true : null">
                 </div>
-                <div class="col-4">
+                <div class="col-3">
                     <label class="lables">Total Amount:</label>
                     <input type="text" class="form-control" [(ngModel)]="Orderdetails.totalAmount"
-                        placeholder="{{Orderdetails.totalAmount}}" [attr.disabled]="isDisabled ? true : null" >
+                        placeholder="{{Orderdetails.totalAmount}}" [attr.disabled]="isDisabled ? true : null">
                 </div>
-                <!-- <div class="col-4">
+            </div>
+
+            <!-- <div class="col-3">
                     <label class="lables">Name:</label>
                     <input type="text" class="form-control" [(ngModel)]="Orderdetails.firstName"
                         placeholder="{{Orderdetails.firstName}}">
                 </div> -->
 
-                <!-- <div class="col-4">
+            <!-- <div class="col-3">
                     <label>Status:</label>
                 <input type="text" formControlName="statusCd" [(ngModel)]="verifypaymentform.statusCd"
                     class="form-control">
@@ -60,32 +61,35 @@
                 </div> -->
 
 
-                <!-- <div class="col-4">
+            <!-- <div class="col-3">
                     <label class="lables">Date and time:</label>
                     <input type="datetime-local" formControlName="lastUpdateDtTm"
                         [(ngModel)]="verifypaymentform.lastUpdateDtTm" class="form-control">
                 </div> -->
-            </div>
+        <!-- </div> -->
 
 
-        </div>
+    </div>
     </div>
 
 
-
+    <!-- <input type="text" formControlName="staffCd"> -->
 
 
     <div id="submittedbtns">
         <!-- <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
         <button style="margin-left:10px" mat-raised-button color="primary" (click)="submit()" mat-dialog-close>Submit</button> -->
-        <button class="btn btn-success" (click)="success($event)" [value]="paymentverified" (click)="paymentSuccess()" style="width: 100px;" >PASS</button>
-        <input type="text" placeholder="{{paymentsuccess}}"  formControlName="statusCd" [(ngModel)]="paymentsuccess" hidden>
-        
-        <button class="btn btn-primary" (click)="failed($event)" [value]="paymentfailed" (click)="paymentFailed()" style="margin-left:20px;width:100px">FAIL</button>
-        <input type="text" placeholder="{{paymentfail}}"  formControlName="statusCd" [(ngModel)]="paymentfail" hidden>
+        <button class="btn btn-success" (click)="success($event)" [value]="paymentverified" (click)="paymentSuccess()"
+            style="width: 100px;">PASS</button>
+        <input type="text" placeholder="{{paymentsuccess}}" formControlName="statusCd" [(ngModel)]="paymentsuccess"
+            hidden>
 
-          <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
-    
+        <button class="btn btn-primary" (click)="failed($event)" [value]="paymentfailed" (click)="paymentFailed()"
+            style="margin-left:20px;width:100px">FAIL</button>
+        <input type="text" placeholder="{{paymentfail}}" formControlName="statusCd" [(ngModel)]="paymentfail" hidden>
+
+        <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
+
     </div>
 
 
