--- a/src/app/modules/admin/components/products/products.component.html
+++ b/src/app/modules/admin/components/products/products.component.html
@@ -1,66 +1,75 @@
-<div class="spacer"><div>
-  <h1 class="product-heading">List of Products</h1>
-</div>
+<div class="spacer">
+  <div>
+    <h1 class="product-heading">List of Products</h1>
+  </div>
 </div>
 <div class="buttons-area">
-<button mat-mini-fab class="filter-button" color="primary" aria-label="Example icon button with a filter list icon">
-  <mat-icon>filter_list</mat-icon>
-</button>
-<button class="add-button" (click)="openDialog()" mat-stroked-button>Add New Product</button>
+  <button mat-mini-fab class="filter-button" color="primary" aria-label="Example icon button with a filter list icon">
+    <mat-icon>filter_list</mat-icon>
+  </button>
+  <button class="add-button" (click)="openDialog()" mat-stroked-button>Add New Product</button>
 </div>
+
+<div >
+  <mat-form-field class="example-header">
+    <input matInput (keyup)="applyFilter($event)" placeholder="Search Here...">
+  </mat-form-field>
+</div>
+
+
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <ng-container matColumnDef="select">
     <th mat-header-cell *matHeaderCellDef>
-      <mat-checkbox (change)="$event ? masterToggle() : null"
-                    [checked]="selection.hasValue() && isAllSelected()"
-                    [indeterminate]="selection.hasValue() && !isAllSelected()">
+      <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+        [indeterminate]="selection.hasValue() && !isAllSelected()">
       </mat-checkbox>
     </th>
     <td mat-cell *matCellDef="let row">
-      <mat-checkbox (click)="$event.stopPropagation()"
-                    (change)="$event ? selection.toggle(row) : null"
-                    [checked]="selection.isSelected(row)">
+      <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+        [checked]="selection.isSelected(row)">
       </mat-checkbox>
     </td>
   </ng-container>
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef><b>ProductId</b></th>
-      <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
-    </ng-container>
-   
-  
-    
-    <ng-container matColumnDef="productName">
-      <th mat-header-cell *matHeaderCellDef><b>Product Name</b></th>
-      <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="productDesc">
-      <th mat-header-cell *matHeaderCellDef><b>Product Description</b></th>
-      <td mat-cell *matCellDef="let element"> {{element.productDesc}} </td>
+  <ng-container matColumnDef="position">
+    <th mat-header-cell *matHeaderCellDef><b>ProductId</b></th>
+    <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
   </ng-container>
-  
-    
-    <!-- <ng-container matColumnDef="manufacturerId">
+
+
+
+  <ng-container matColumnDef="productName">
+    <th mat-header-cell *matHeaderCellDef><b>Product Name</b></th>
+    <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="productDesc">
+    <th mat-header-cell *matHeaderCellDef><b>Product Description</b></th>
+    <td mat-cell *matCellDef="let element"> {{element.productDesc}} </td>
+  </ng-container>
+
+
+  <!-- <ng-container matColumnDef="manufacturerId">
       <th mat-header-cell *matHeaderCellDef>Manufacturer Id</th>
       <td mat-cell *matCellDef="let element"> {{element.manufacturerId}} </td>
     </ng-container> -->
 
-    <ng-container matColumnDef="manufacturerName">
-        <th mat-header-cell *matHeaderCellDef><b>Manufacturer Name</b></th>
-        <td mat-cell *matCellDef="let element"> {{element.manufacturerName}} </td>
-      </ng-container>
+  <ng-container matColumnDef="manufacturerName">
+    <th mat-header-cell *matHeaderCellDef><b>Manufacturer Name</b></th>
+    <td mat-cell *matCellDef="let element"> {{element.manufacturerName}} </td>
+  </ng-container>
 
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef><b>Actions</b></th>
-        <!-- <td mat-cell *matCellDef="let element"><button mat-mini-fab color="basic" (click)="GotoProduct(element.productId)"><mat-icon>input</mat-icon></button></td> -->
-        <td mat-cell *matCellDef="let element"><a style="color: black;" [routerLink]="['/admin/products', element.productId]"><mat-icon>input</mat-icon></a></td>
-      </ng-container>
-    
-    <!-- <ng-container matColumnDef="productDesc">
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef><b>Actions</b></th>
+    <!-- <td mat-cell *matCellDef="let element"><button mat-mini-fab color="basic" (click)="GotoProduct(element.productId)"><mat-icon>input</mat-icon></button></td> -->
+    <td mat-cell *matCellDef="let element"><a style="color: black;"
+        [routerLink]="['/admin/products', element.productId]"><mat-icon>input</mat-icon></a></td>
+  </ng-container>
+
+  <!-- <ng-container matColumnDef="productDesc">
         <th mat-header-cell *matHeaderCellDef><b>Product Description</b></th>
         <td mat-cell *matCellDef="let element"> {{element.productDesc}} </td>
     </ng-container> -->
-    
-    <tr mat-header-row  *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
