--- a/src/app/modules/admin/components/products/products.component.scss
+++ b/src/app/modules/admin/components/products/products.component.scss
@@ -82,3 +82,14 @@ table {
     font-weight: 500;
     text-shadow: 1px 1px 1px rgb(63, 51, 51);
   }
+
+  .example-header {
+     min-height: 200px;
+    // padding: 8px 24px 0;
+    margin-left: 260px;
+    position: absolute;
+    width: 500px;
+    margin-top: -60px;
+    font-size: 18px;
+
+  }
