--- a/src/app/modules/admin/components/verify-payment/verify-payment.component.scss
+++ b/src/app/modules/admin/components/verify-payment/verify-payment.component.scss
@@ -7,11 +7,11 @@
     height: 200px;
     margin-top: 50px;
 }
-.card-body1{
-    display: inline-flex;
+// .card-body1{
+//     // display: inline-flex;
 
-    // margin-top: 50px;
-}
+//     // margin-top: 50px;
+// }
 .lables{
     font-size: 15px;
     font-weight: bold;
@@ -42,7 +42,9 @@ h1{
     margin-top: -200px;
 }
 
-
+.col-3{
+    margin-left: 50px;
+}
 
 
 
