--- a/src/app/modules/admin/components/staff-list/staff-list.component.scss
+++ b/src/app/modules/admin/components/staff-list/staff-list.component.scss
@@ -4,6 +4,8 @@
      margin-right: 60px;
      margin-top: 30px;
      font-family: initial;
+     overflow-y: auto;
+     height: auto;
     
   }
   
