--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.html
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.html
@@ -5,6 +5,10 @@
       <mat-form-field class="product-name" appearance="fill">
         <mat-label>Product Name</mat-label>
         <input matInput formControlName="productName">
+      
+        <div *ngIf="submitted && productForm.get('productName').invalid">
+          <!-- <div *ngIf="productForm.get('productName').errors.required"> Product Name is required.</div> -->
+        </div>
       </mat-form-field>
 
 
@@ -15,6 +19,10 @@
           <mat-option *ngFor="let vendor of vendorData" [value]="vendor.manufacturerId">
             {{vendor.manufacturerName}}
           </mat-option>
+       
+          <div *ngIf="submitted && productForm.get('manufacturerId').invalid">
+            <!-- <div *ngIf="productForm.get('manufacturerId').errors.required"> Select Vendor Name.</div> -->
+          </div>
         </mat-select>
       </mat-form-field>
 
@@ -32,12 +40,20 @@
             [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
             (matChipInputTokenEnd)="addTag($event)">
         </mat-chip-list>
+        
+        <div *ngIf="submitted && productForm.get('searchTag').invalid">
+          <div *ngIf="productForm.get('searchTag').errors.required" style="color: red;">SearchTag is required.</div>
+        </div>
       </mat-form-field>
     </div>
     <div>
       <mat-form-field class="product-description" appearance="fill">
         <mat-label>Product Description</mat-label>
         <textarea formControlName="productDesc" matInput placeholder="Type Here..."></textarea>
+      
+        <div *ngIf="submitted && productForm.get('productDesc').invalid">
+          <!-- <div *ngIf="productForm.get('productDesc').errors.required">ProductDes is required.</div> -->
+        </div>
       </mat-form-field>
 
 
@@ -48,36 +64,31 @@
 
           <mat-label>Select Catalog</mat-label>
           <mat-select multiple [(value)]="selectedCatalogVals" (selectionChange)="onSelectCatalogs()">
-           
+
             <!-- <mat-select multiple [(value)]="selectedmanufactureId" formControlName="selectedCatalogs"> -->
-            <!-- <input class="form-control" href="#datalistOptions" id="exampleDataList" placeholder="Type to search..." class="col-6" [(ngModel)]="searchText"> -->
-            <mat-option *ngFor="let item of Catalogsdata" [value]="item">
+           <mat-option *ngFor="let item of Catalogsdata" [value]="item">
               {{item.parent}}/{{item.catalogName}}
 
             </mat-option>
 
           </mat-select>
+          
         </mat-form-field>
 
       </div>
     </div>
+ <div>
 
-
-
-
-
-    <div>
-
-      <button type="button" (click)="addNewCatalog()" id="addnewcatalogbtn" class="btn btn-outline-primary">Add New
-        Catalog</button>
+      <button type="button" (click)="addNewCatalog()" id="addnewcatalogbtn" class="btn btn-outline-primary">Add New Catalog</button>
     </div>
 
 
     <div mat-dialog-action [align]="'center'">
       <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
-      <button style="margin-left:10px" mat-raised-button color="primary" (click)="addProduct(productForm)"
-        mat-dialog-close>Submit</button>
+      <button style="margin-left:10px" mat-raised-button color="primary" (click)="addProduct(productForm)">Submit</button>
+        <div *ngIf="submitted && !productForm.valid">All fields are required.</div>
     </div>
+
   </form>
 </div>
 
