--- a/src/app/modules/admin/components/add-staff/add-staff.component.html
+++ b/src/app/modules/admin/components/add-staff/add-staff.component.html
@@ -28,7 +28,7 @@
 
                 <mat-form-field class="pincode">
                     <mat-label>Pincode</mat-label>
-                    <input matInput type="number" formControlName="pincode">
+                    <input matInput formControlName="pincode">
                     <div *ngIf="submitted && addstaffform.get('pincode').invalid">
                     </div>
                 </mat-form-field>
