--- a/src/app/modules/admin/components/add-new-catalog/add-new-catalog.component.html
+++ b/src/app/modules/admin/components/add-new-catalog/add-new-catalog.component.html
@@ -6,43 +6,48 @@
                 <mat-form-field class="catalogName" appearance="fill">
                     <mat-label>Catalog Name</mat-label>
                     <input matInput formControlName="catalogName">
+                    <div *ngIf="submitted && addnewcatalogform.get('catalogName').invalid">
+                        <!-- <div *ngIf="productForm.get('productName').errors.required"> Product Name is required.</div> -->
+                    </div>
                 </mat-form-field>
-        
-        
+
+
                 <mat-form-field class="catalogDesc" appearance="fill">
                     <mat-label>catalogDesc</mat-label>
                     <input matInput formControlName="catalogDesc">
+                    <div *ngIf="submitted && addnewcatalogform.get('catalogDesc').invalid">
+                        <!-- <div *ngIf="productForm.get('productName').errors.required"> Product Name is required.</div> -->
+                    </div>
                 </mat-form-field>
             </div>
             <div>
                 <mat-form-field class="catalogLevel" appearance="fill">
                     <mat-label>catalogLevel</mat-label>
                     <input matInput type="number" formControlName="catalogLevel">
+                    <div *ngIf="submitted && addnewcatalogform.get('catalogLevel').invalid">
+                        <!-- <div *ngIf="productForm.get('productName').errors.required"> Product Name is required.</div> -->
+                    </div>
                 </mat-form-field>
-           
 
-      
+
+
                 <mat-form-field class="parentCatalogId" appearance="fill">
                     <mat-label>parentCatalogId</mat-label>
                     <input matInput type="number" formControlName="parentCatalogId">
+                    <div *ngIf="submitted && addnewcatalogform.get('parentCatalogId').invalid">
+                        <!-- <div *ngIf="productForm.get('productName').errors.required"> Product Name is required.</div> -->
+                    </div>
                 </mat-form-field>
             </div>
+         
+           
 
-            <!-- <mat-form-field class="product-name" appearance="fill">
-                <mat-label>catalogId</mat-label>
-                <input matInput type="number" formControlName="catalogId">
-            </mat-form-field> -->
-
-            <!-- <mat-form-field class="product-name" appearance="fill">
-                <mat-label>storeId</mat-label>
-                <input matInput type="number" formControlName="storeId">
-            </mat-form-field> -->
-              </div>
+        </div>
 
         <div mat-dialog-action [align]="'center'">
             <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
-            <button style="margin-left:10px" mat-raised-button color="primary"
-              (click)="addNewCatalog(addnewcatalogform)">Submit</button>
+            <button type="submit" style="margin-left:10px" mat-raised-button color="primary"
+                (click)="addNewCatalog(addnewcatalogform)">Submit</button>
             <div *ngIf="submitted && !addnewcatalogform.valid">All fields are required.</div>
         </div>
     </form>
